Time: 3 ms (83.31%), Space: 43.1 MB (84.23%) - LeetHub